# bob

./: .gitignore  ARCHITECTURE.md  FINDINGS-2.md  FINDINGS-3.md  FINDINGS.md  MEMORY.md  PLAN.md  README.md  pyproject.toml
knowledge/: priors.md
memory/: project_landscape.md  project_vision.md  user_noot.md
src/bob/: account_lifecycle.py  agent.py  aggregator.py  auth.py  auth_strategy.py  autologin.py  cli.py  composer.py  login.py  models.py  platform_fields.py  preflight.py  profile_warming.py  registration.py  resolvers.py  signup.py  situation.py  telemetry.py  validate.py
src/bob/accounts/: __init__.py  credentials.py  models.py  registry.py  vault.py
src/bob/personas/: __init__.py  generator.py  models.py
src/bob/roster/: __init__.py  models.py  store.py
src/bob/sources/: __init__.py  base.py  devfolio.py  devpost.py  eventbrite.py  luma.py  meetup.py  mlh.py
src/bob/tools/: browser.py  github.py  mcp.py  platforms.py  web.py
src/hackathon_finder/: __init__.py  agent.py  aggregator.py  cli.py  models.py  oauth.py  situation.py  validate.py
src/hackathon_finder/sources/: __init__.py  base.py  devfolio.py  devpost.py  eventbrite.py  luma.py  meetup.py  mlh.py
src/hackathon_finder/tools/: github.py  map.py  mcp.py  platforms.py
tests/: conftest.py  test_account_lifecycle.py  test_accounts.py  test_agent.py  test_aggregator.py  test_auth.py  test_auth_strategy.py  test_autologin.py  test_browser.py  test_cli.py  test_composer.py  test_credentials.py  test_devfolio.py  test_devpost.py  test_eventbrite.py  test_login.py  test_luma.py  test_meetup.py  test_mlh.py  test_models.py  test_personas.py  test_platform_fields.py  test_preflight.py  test_profile_warming.py  test_registration.py  test_resolvers.py  test_roster.py  test_signup.py  test_situation.py  test_telemetry.py  test_tools_github.py  test_tools_map.py  test_tools_platforms.py  test_tools_web.py  test_validate.py
