[project]
name = "hackathon-finder"
version = "0.1.0"
description = "Find hackathons across platforms — in-person SF and virtual"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
scrape = [
    "stealth-browser[patchright]",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
hackathon-finder = "hackathon_finder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon_finder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
